fix: the footer now scales accurately on mobile

--- a/main.css
+++ b/main.css
@@ -435,12 +435,15 @@ a[href] .itemContent .itemTitle::after {
 .footerIcon {
     width: 32px;
     height: 32px;
+    filter: contrast(0.8) brightness(0.9) saturate(0.7) grayscale(0.3);
+}
+
+.footerIconLink {
     text-decoration: none;
     position: relative;
     left: 140px;
-    top: 90px;
+    top: 95px;
     margin-right: 10px;
-    filter: contrast(0.8) brightness(0.9) saturate(0.7) grayscale(0.3);
 }
 
 .footerIcon:hover {
@@ -463,18 +466,19 @@ a[href] .itemContent .itemTitle::after {
 @media only screen and (max-width: 1040px) {
     
     #projects {
-        padding-bottom: 180px;
+        padding-bottom: 140px;
     }
     
     #projectsHeader {
         position: relative;
-        top: 90px;
-        font-size: 1.25rem;
+        top: 105px;
+        font-size: 1.3rem;
     }
 
     #projectsGrid {
+        grid-row-gap: 15px;
         grid-template-columns: repeat(1, 1fr);
-        width: 80%;
+        width: 72%;
         max-width: 340px;
         position: relative;
         top: 105px;
@@ -482,47 +486,54 @@ a[href] .itemContent .itemTitle::after {
     
     #footer {
         margin-top: 50px;
-        height: 220px;
+        height: 180px;
         max-width: 1040px;
     }
     
     #footerLeftWrapper {
-        width: 1/3%;
-        /*background-color:#637D74;
+        width: calc(100%/3);
+        /*background-color:#637D74;*/
     }
     
     #footerMiddleWrapper {
-        width: 1/3%;
+        width: calc(100%/3);
         /*background-color: #B9A997;*/
     }
     
     #footerRightWrapper {    
-        width: 1/3%;
+        width: calc(100%/3);
         /*background-color: #BCDBDB;*/
     }
+    
     #footerIllustration {
-        width: 160px;
+        width: 165px;
         position: relative;
-        left: 0;
-        top: 50px;
+        left: -16px;
+        top: 20px;
     }
     
     .footerIcon {
         float: right;
         width: 32px;
         height: 32px;
-        left: -5px;
-        top: 170px;
         margin-right: 5px;
+    }
+    
+    .footerIconLink {
+        text-decoration: none;
+        position: relative;
+        left: -5px;
+        top: 140px;
+        margin-right: 5px;
+        white-space: nowrap;
     }
     
     #footerCopyright {
         float: left;
-        color: #ff0000;
-        opacity: 0.5;
-        font-size: 0.8rem;
-        top: 170px;
-        left: 5px;
-        display: block;
+        opacity: 0.3;
+        font-size: 0.85rem;
+        top: 155px;
+        left: 10px;
+        white-space: nowrap;
     }
 }
